--- a/.env
+++ b/.env
@@ -87,7 +87,13 @@ TZ=Europe/Paris
 
 
 # -- VERSIONS IMAGES DOCKER -- 
-# + À noter : ces variables d'envrionnement sont utilisée à la fois dans le docker-compose.yml, et dans les fichiers Dockerfile
+# + À noter : ces variables d'envrionnement sont utilisée à la fois dans le docker-compose.yml, mais ne peuvent être utilisées dans les fichiers Dockerfile ('on recourera à du template jinja2 / ansible)
 VERSION_IMAGE_CENTOS=centos:7
 # VERSION_IMAGE_GITLAB_CE=gitlab/gitlab-ce:$GITLAB_CE_VERSION
+# VERSION_IMAGE_GITLAB_RUNNER=gitlab/gitlab-runner:${GITLAB_RUNNER_VERSION}
 VERSION_IMAGE_NGINX=nginx:latest
+VERSION_IMAGE_ROCKETCHAT=rocketchat/rocket.chat:latest
+VERSION_IMAGE_MONGO=mongo:latest
+# VERSION_IMAGE_POSTGRES=postgres:${POSTGRES_VERSION}
+# VERSION_IMAGE_REDIS=redis:{REDIS_VERSION}
+
